--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
   font-size: 18px;
   font-family: "Vibur", sans-serif;
   background-color: #010a01;
+  margin: 10%;
 }
 
 .wrapper {
@@ -121,11 +122,12 @@ p{
 a { 
   
         display: inline-block;
+        left: 20%;
         text-align: right;
         position: absolute;
-        bottom: 10px; left: 45%;
-        width: 50%;
-        font-size: 80%;
+        bottom: 10px;
+        width: 100%;
+        font-size: 50%;
         color: rgb(255, 253, 253);text-shadow:
         0 0 7px #fff,
         0 0 10px rgb(211, 33, 137),
@@ -144,5 +146,6 @@ a {
         0 0 151px rgb(255, 255, 255);
       
 }
+
 
 
